--- a/package/Install
+++ b/package/Install
@@ -2,7 +2,7 @@
 ; -----------------------------------------
 ;
 ; Author: Henrik Noerfjand Stengaard 
-; Date: 2019-07-24
+; Date: 2019-09-09
 ;
 ; This script extracts and installs ClassicWB FULL v28 created by Bloodwych from EAB.
 ; With permission from Bloodwych it's been converted to a package for HstWB Installer.
@@ -17,6 +17,10 @@
 ; - Added support for Amiga OS 3.1.4:
 ;   - Reinstalled MUI to fix Scalos prefs and iGame.
 ;   - Patched Scalos title to 3.1.4 for no theme, Oldicons, Retro and ReGen themes.
+;   - Option to disable Scalos to fix NewIcons shown garbled or distorted. This replaces Scalos with following:
+;     - Added Full Palette for better colors in icons.
+;     - Added Tools Daemon for added options in Workbench top menu.
+;     - Added Magic Menu for right click menu in Wokrbench.
 ;   - Added LoadModule ROMUPDATE to support Kickstart 3.1 being patched to 3.1.4.
 ;   - Added version checking of DEVS:scsi.device, so it only will be loaded if scsi.device in memory/resident is less than v43.45.
 ;   - Added install patch Amiga OS 3.1.4.1, if Amiga OS 3.1.4.1 update is installed.
@@ -73,10 +77,13 @@ ENDIF
 ; Extract classicwb full v28 zip to systemdir
 echo "Installing ClassicWB FULL..."
 
+; copy loadwb for enabling amigaos
+Copy >NIL: "SYSTEMDIR:C/LoadWB" "SYSTEMDIR:C/LoadWB.AmigaOS"
+
 IF "$amigaosversion" EQ "3.1.4"
   ; extract classicwb full excluding files conflicting with amiga os 3.1.4
   unzip -qq -o -x PACKAGEDIR:classicwb_full_v28.zip -d SYSTEMDIR: -x *LoadModule *LoadResource *MakeLink *SetPatch *CDFileSystem *CrossDOSFileSystem *FastFileSystem *DANSK.crossdos *INTL.crossdos *MAC.crossdos *68040.library *asl.library *Icon.Library *lowlevel.library *nonvolatile.library *realtime.library
-  
+
   ; reinstall mui to fix scalos prefs and igame
   MakePath >NIL: "SYSTEMDIR:Temp/MUI"
   lha -m1 -q x "PACKAGEDIR:mui38usr.lha" "SYSTEMDIR:Temp/MUI/"
@@ -98,6 +105,10 @@ ELSE
   Copy >NIL: PACKAGEDIR:Startup-Sequence.3.1 SYSTEMDIR:S/Startup-Sequence
 ENDIF
 
+; copy classicwb patches to systemdir
+Copy >NIL: PACKAGEDIR:Patches/#? SYSTEMDIR: ALL
+
+
 ; Copy scsi device
 IF EXISTS DEVS:scsi.device
   COPY >NIL: DEVS:scsi.device SYSTEMDIR:Devs
@@ -111,6 +122,9 @@ delete >NIL: SYSTEMDIR:T/Science
 IF EXISTS SYSTEMDIR:C/LoadWB.temp
   copy >NIL: SYSTEMDIR:C/LoadWB.temp SYSTEMDIR:C/LoadWB
   delete >NIL: SYSTEMDIR:C/LoadWB.temp
+
+  ; copy loadwb for enabling scalos
+  Copy >NIL: "SYSTEMDIR:C/LoadWB" "SYSTEMDIR:C/LoadWB.Scalos"
 ENDIF
 
 delete >NIL: SYSTEMDIR:S/Workbench3.1
@@ -130,14 +144,58 @@ IF EXISTS SYSTEMDIR:System/IconLib/S/Startup-Sequence30
   copy SYSTEMDIR:System/IconLib/S/Startup-Sequence30 SYSTEMDIR:System/IconLib/S/Startup-Sequence CLONE
 ENDIF
 
+
 LAB OPTIONS
 
-  cd SYSTEMDIR:
-  ;C:MakeDir RAM:T RAM:Clipboards RAM:ENV RAM:ENV/Sys
-  copy >NIL: SYSTEMDIR:Prefs/Env-Archive RAM:ENV ALL NOREQ
-  Assign >NIL: ENV: RAM:ENV
-  Protect FONTS:#? +RWED ALL QUIET
-  SYSTEMDIR:System/FixFonts
+cd SYSTEMDIR:
+;C:MakeDir RAM:T RAM:Clipboards RAM:ENV RAM:ENV/Sys
+copy >NIL: SYSTEMDIR:Prefs/Env-Archive RAM:ENV ALL NOREQ
+Assign >NIL: ENV: RAM:ENV
+Protect FONTS:#? +RWED ALL QUIET
+SYSTEMDIR:System/FixFonts
+
+
+; skip to igame, if amiga os is not 3.1.4
+IF NOT "$amigaosversion" EQ "3.1.4"
+  SKIP IGAME
+ENDIF
+
+; disable scalos
+; --------------
+LAB disablescalos
+
+set disablescalos `RequestChoice "Disable Scalos" "Amiga OS 3.1.4 doesn't work well with Scalos showing*NNewIcons like WHDLoad slaves.*N*NDo you want to disable Scalos?" "Help|Yes|No"`
+
+; help option
+IF "$disablescalos" EQ 1 VAL 
+  IF EXISTS "PACKAGEDIR:Help/Disable-Scalos.txt"
+    Lister "PACKAGEDIR:Help/Disable-Scalos.txt" >NIL:
+  ELSE
+    echo "*e[1mError: Help file 'PACKAGEDIR:Help/Disable-Scalos.txt' doesn't exist!*e[0m"
+    quit 20
+  ENDIF
+  SKIP BACK disablescalos
+ENDIF
+
+; yes option
+IF "$disablescalos" EQ 2 VAL
+  ; disable scalos
+  Copy >NIL: "SYSTEMDIR:C/LoadWB.AmigaOS" "SYSTEMDIR:C/LoadWB"
+  Echo "" NOLINE >SYSTEMDIR:Prefs/Env-Archive/Scalos/Scalos_disabled
+
+  ; enable magic menu
+  Copy >NIL: SYSTEMDIR:Storage/Startup/MagicMenu SYSTEMDIR:WBStartup
+  Copy >NIL: SYSTEMDIR:Storage/Startup/MagicMenu.info SYSTEMDIR:WBStartup
+  Delete >NIL: SYSTEMDIR:Storage/Startup/MagicMenu
+  Delete >NIL: SYSTEMDIR:Storage/Startup/MagicMenu.info
+
+  ; enable tools daemon
+  Copy >NIL: SYSTEMDIR:Storage/Startup/ToolsDaemon SYSTEMDIR:WBStartup
+  Copy >NIL: SYSTEMDIR:Storage/Startup/ToolsDaemon.info SYSTEMDIR:WBStartup
+  Delete >NIL: SYSTEMDIR:Storage/Startup/ToolsDaemon
+  Delete >NIL: SYSTEMDIR:Storage/Startup/ToolsDaemon.info
+ENDIF
+
 
 LAB IGAME
 
@@ -359,9 +417,12 @@ LAB RETRO
   ; patch scalos title, if amiga os version is 3.1.4
   IF "$amigaosversion" EQ "3.1.4"
     Copy >NIL: "PACKAGEDIR:Scalos.prefs.theme" "SYSTEMDIR:Prefs/Env-Archive/Scalos/Scalos.prefs"
+
+    Copy >NIL: SYSTEMDIR:Prefs/Env-Archive/Sys/WBPattern.prefs.retro SYSTEMDIR:Prefs/Env-Archive/Sys/WBPattern.prefs CLONE
+    Delete >NIL: SYSTEMDIR:Prefs/Env-Archive/Sys/WBPattern.prefs.retro
   ENDIF
 
-  copy SYSTEMDIR:Prefs/Env-Archive/Scalos/Scalos.prefs SYSTEMDIR:MyFiles/Install/Icons/Enable/Prefs/Env-Archive/Scalos/Scalos.prefs CLONE
+  Copy >NIL: SYSTEMDIR:Prefs/Env-Archive/Scalos/Scalos.prefs SYSTEMDIR:MyFiles/Install/Icons/Enable/Prefs/Env-Archive/Scalos/Scalos.prefs CLONE
 
   wait 1
   SKIP OLDICONS
@@ -396,9 +457,12 @@ LAB REGEN
   ; patch scalos title, if amiga os version is 3.1.4
   IF "$amigaosversion" EQ "3.1.4"
     Copy >NIL: "PACKAGEDIR:Scalos.prefs.theme" "SYSTEMDIR:Prefs/Env-Archive/Scalos/Scalos.prefs"
+
+    Copy >NIL: SYSTEMDIR:Prefs/Env-Archive/Sys/WBPattern.prefs.regen SYSTEMDIR:Prefs/Env-Archive/Sys/WBPattern.prefs CLONE
+    Delete >NIL: SYSTEMDIR:Prefs/Env-Archive/Sys/WBPattern.prefs.regen
   ENDIF
 
-  copy SYSTEMDIR:Prefs/Env-Archive/Scalos/Scalos.prefs SYSTEMDIR:MyFiles/Install/Icons/Enable/Prefs/Env-Archive/Scalos/Scalos.prefs CLONE
+  Copy >NIL: SYSTEMDIR:Prefs/Env-Archive/Scalos/Scalos.prefs SYSTEMDIR:MyFiles/Install/Icons/Enable/Prefs/Env-Archive/Scalos/Scalos.prefs CLONE
 
   wait 1
 
